# d3-item-salvager

./: .coderabbit.yaml  .coverage  .env-example  .gitignore  .pre-commit-config.yaml  README.md  TODO.md  alembic.ini  demo_print_build_profiles.py  errors.md  exported_profile_data.json  hello.py  pyproject.toml  requirements.txt  rootcause.md  ruff.toml
.beads/: issues.jsonl
.github/: copilot-instructions.md
.github/agents/: beads-Plan.agent.md
.github/chatmodes/: tdd-green.chatmode.md  tdd-red.chatmode.md  tdd-refactor.chatmode.md
.github/instructions/: commitMessageGeneration.instructions.md
.github/prompts/: beads-bd.prompt.md  beads-implement.prompt.md  gitea.prompt.md
.specify/memory/: constitution.md
alembic/: env.py
alembic/versions/: 0001_initial.py
cache/: maxroll_guides.json
docs/: 00 implementationPlan.md  01 databaseImplementation.md  02 migrationsImplementation.md  03 maxroll_parserImplementation.md  03_maxroll_parserImplementation_v2.md  03_maxroll_parserImplementation_v3.md  03_maxroll_parserImplementation_v4.md  04 configImplementation.md  05 loggingImplementation.md  06 exceptionsImplementation.md.deferred  06 exceptionsImplementation.v2.md  07 utilsImplementation.md  08 dependencyInjectionImplementation.md  09 servicesImplementationv2.md  10 workersImplementation.md  11 apiImplementation.md  12 securityImplementation.md  13_cicd_pipeline_best_practices.md  14 Pre-commit Hook Best Practices.md  GithubMCPOutline.md  apiImplementation.md  configImplementation.md  databaseImplementation.md  exceptionsImplementation.md  implementationPlan.md  reset_local_db.md  servicesImplementation.md  workersImplementation.md
frontend/: __init__.py  app.py  package.json
frontend/scripts/: start_servers.py
frontend/src/: __init__.py  config.py
frontend/templates/: item_list.html  item_row.html  search.html  selection_panel.html
frontend/tests/: __init__.py  conftest.py
reference/: build_guide-010162026_swk.html  build_guide.html  data.json  gametips.scss  guides_list.json  itemTable.scss  list_of_builds.html  profile_object_298017784.json  profile_object_861723133.json
scripts/: stop_servers.py
specs/001-design-a-frontend/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/002-frontend-ui-redesign/: plan.md  research.md  spec.md  tasks.md
src/d3_item_salvager/: __main__.py  container.py  dependencies.py
src/utility/: export_profile_data.py
tests/: conftest.py
tests/api/: test_endpoints.py  test_factory.py
tests/cli/: test_entrypoints.py
tests/config/: test_settings.py
tests/contract/: test_openapi_contracts.py
tests/data/: test_loader.py  test_queries.py  test_queries_build_aggregation.py
tests/fakes/: test_config.py  test_db_utils.py
tests/integration/: test_builds_items.py  test_frontend_backend_integration.py  test_items_lookup.py  test_migrations.py  test_reset_local_db.py  test_search_integration.py  test_union_items.py
tests/logging/: test_setup.py
tests/maxroll_parser/: __init__.py  test_build_loader.py  test_build_profile_parser.py  test_data_loader.py  test_data_parser.py  test_extract_build.py  test_extract_data.py  test_get_guide_urls.py  (+6 more)
(+165 files in other folders)
