[project]
name = "d3-item-salvager"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "beautifulsoup4>=4.13.4",
    "numpy>=2.3.2",
    "pandas>=2.3.1",

    "requests>=2.32.4",
]

[dependency-groups]
dev = [
    "hatch>=1.14.1",
    "types-requests>=2.32.4.20250611",
    "pytest>=8.4.1",
    "pytest-mock>=3.14.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/d3_item_salvager"]
