[project]
name = "d3-item-salvager"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "beautifulsoup4>=4.13.4",
    "numpy>=2.3.2",
    "pandas>=2.3.1",
    "pydantic-settings>=2.10.1",
    "pydantic>=2.11.7",
    "python-dotenv>=1.1.1",
    "requests>=2.32.4",
    "sqlmodel>=0.0.24",
    "typer>=0.16.0",
    "loguru>=0.7.3",
]

[dependency-groups]
dev = [
    "hatch>=1.14.1",
    "types-requests>=2.32.4.20250611",
    "pytest>=8.4.1",
    "pytest-mock>=3.14.1",
    "pytest-cov>=6.2.1",
    "prometheus-client>=0.22.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/d3_item_salvager"]

[tool.pytest.ini_options]
pythonpath = "src"
addopts = ["-v", "--color=yes"]
testpaths = ["tests"]
python_files = "test_*.py"

[tool.mypy]
plugins = ['pydantic.mypy']
